--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="./src/assets/logo.png">
     <link rel="icon" type="image" href="/task_mangement/src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>task_mangement</title>
+    <title>Task Management Tracker</title>
   </head>
   <body>
     <div id="root"></div>
